--- a/output/portfolio/custom.css
+++ b/output/portfolio/custom.css
@@ -1,6 +1,6 @@
 @font-face {
         font-family: "xkcd";
-        src: url('http://antiyawn.com/uploads/Humor-Sans.ttf');
+        src: url('Humor-Sans.ttf');
 }
 div.cell {
             border: 2px solid black;
